# BacASable

./: .gitignore  README.md
Ansible/: README.md  ansible.cfg  inventory.ini
Ansible/playbooks/: hello_world.yml
AutoLoadLib/: README.md
AutoLoadLib/Step01/: README.md  autoloader.cpp  build.sh  lib.c  module.cpp
AutoLoadLib/Step02/: Makefile  README.md  autoloader.cpp  lib.c  module.cpp
AutoLoadLib/Step03/: Autoloader.hpp  Makefile  lib.hpp
Bash/: README.md  backup-github.sh
C/AutoLoadLib/: README.md
ChatGPT/: 00_road.cpp  01_parking.cpp  01_road.cpp  02_parking_fix.cpp  02_road.cpp  02_road.md  03_parking.cpp  04_parking.cpp  05_parking.cpp  06_parking.cpp  07_parking.cpp  README.md
Cpp/CSproperties/: Property.cpp  README.md
Cpp/ConditionVariable/: ConditionVariable.cpp
Cpp/Container/: CMakeLists.txt  README.md
Cpp/Container/cmake/: containerConfig.cmake.in
Cpp/Container/include/: Collection.hpp  Set.hpp
Cpp/Container/tests/: test_collection.cpp  test_set.cpp
Cpp/DesignPatterns/: README.md
Cpp/EndPoints/: EndPoint-v0.cpp  EndPoint-v1.cpp  EndPoint-v2.cpp  EndPoint-v3.cpp  EndPoint-v4.cpp
Cpp/Fabric/: Fabric.cpp  Fabric2.cpp
Cpp/ForthWrapper/: README.md
Cpp/Graph/: Graph.hpp  main.cpp
Cpp/Multithread/: README.md  SyracusNumbers.cpp
Cpp/Observer/: Observer.cpp
Cpp/Peer2Peer/: Client.cpp  Client.hpp  GameManager.cpp  GameManager.hpp  GameRenderer.cpp  GameRenderer.hpp  GameState.hpp  Host.cpp  Host.hpp  NetworkNode.cpp  NetworkNode.hpp  NetworkProtocol.cpp  NetworkProtocol.hpp  README.md  Serialization.hpp  SimCity.cpp  TODO  build.sh  classes.plantuml  sequence.plantuml
Cpp/RuntimePolymorphism/: README.md  RuntimePolymorphism1.cpp  RuntimePolymorphism2.cpp
Cpp/SFML/: Button.cpp
Cpp/Serialization/: Makefile  Serialization.h  main.cpp
Cpp/Symbolic/: GINaC.cpp  README.md  SymEngine.cpp  Symbolic.cpp
Cpp/TemplateMakefile/: Makefile
Cpp/Union/: union.cpp
Cpp/UnitTests/: README.md
Cpp/UnitTests/Mock2/: CMakeLists.txt  MainClass.cpp  MainClass.h  Publisher.cpp  Publisher.h  README.md  main.cpp
Cpp/UnitTests/Mock2/src/: example.c  example.h
Cpp/UnitTests/Mock2/test/: MockPublisher.h  test_mainclass.cpp
Cpp/UnitTests/Mock2/tests/: main.cpp  mocks.hpp
Cpp/VisitFolder/: Deleter.hpp  Directory.hpp
DesignPatterns/: README.md
DesignPatterns/MVC-MVP/: 02_MVP.cpp  03_MVC.cpp  build.sh
DesignPatterns/Observer/: Observer.cpp  README.md  Sigc.cpp
ForthWrapper/: README.md
ForthWrapper/Cpp11/: Stack.hpp  car.cpp
GTK/DesignPattern/: README.md
GTK/GTKServer/: README.md  gtk_image-tcp.bash
GTKServer/: README.md  gtk_drawing_area-not-working.bash  gtk_image-fifo.bash  gtk_image-fifo.gforth
GameEngine/: README.md
GameEngine/Godot/: README.md
GameEngine/SFML/: README.md
GameEngine/Unity/: README.md
Gedit/SyntaxHighlighting/: README.md
GeditSyntaxHighlighting/Logs/: logs.lang  logs.xml
Godot/: README.md
Godot/Camera/: MovingClickableCube.gd  README.md  project.godot
Julia/C/: README.md  foo.c  foo.jl
Julia/Gtk/: GtkJulia.jl
Julia/JuliaCpp/: README.md  build.sh  entry_point.cpp  entry_point.hpp  julia.cpp  main.jl  main_c.c
Julia/MaxPlus/: README.md
Julia/Standalone/: Project.toml  README.md  build.jl
LawControl/AutoParking/: Car.cpp  Car.hpp  Dimensions.hpp  README.md  Shapes.cpp  Shapes.hpp  Utils.hpp  build.sh  main.cpp  main.hpp
LawControl/Kahan/: Sum.cpp
MVC-MVP/: 00_MVP.cpp  00_MVP_bis.cpp  01_MVP.cpp  build.sh
MaxPlus/: README.md  maxplus.ipynb
MyMakefile/: targz.sh
PlantGrowth/: plant.sci
Prolog/: Graph.pro  MotsCroises.pl  README.md  animal.pl  graph.cpp  graph.pl
Python/: ThreadExecutor.py
Qt/Dock/: CMakeLists.txt  DrawingWidget.cpp  DrawingWidget.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  README.md  main.cpp
Qt/MVVM/: CMakeLists.txt  Image.h  ImageItem.h  Main.qml  ViewModel.cpp  ViewModel.h  main.cpp
RobotFramework/: README.md  test.robot
ScicosBlocks/: README.md  Scicos_Macros.h
Syracuse/: Makefile  README.md
UnityTransform/: Cube.cs
cmake/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt
cmake/application/: CMakeLists.txt
cmake/application/pch/: pch.hpp
cmake/application/src/: main.cpp
cmake/application/tests/: test_application.cpp
cmake/cmake/: Compiler.cmake  CompilerWarnings.cmake  Conan.cmake  Coverage.cmake  DebugSymbols.cmake  Doxygen.cmake  FetchBackwardCpp.cmake  FetchGoogleTest.cmake  Module.cmake  ModuleAPI.cmake  ModuleInternal.cmake  PCH.cmake  PrettyPrint.cmake  ProjectBootstrap.cmake  Sanitizers.cmake  Stacktrace.cmake  Summary.cmake  Testing.cmake  Utilities.cmake
cmake/kinematics/: CMakeLists.txt
cmake/kinematics/mock/kinematics/: DifferentialDriveMock.h
cmake/kinematics/pch/: pch.hpp
cmake/kinematics/src/: DifferentialDrive.cpp
cmake/kinematics/tests/: test_differential_drive.cpp
cmake/odometry/: CMakeLists.txt
cmake/odometry/include/odometry/: Pose2D.h  WheelOdometry.h
cmake/odometry/pch/: pch.hpp
cmake/odometry/src/: WheelOdometry.cpp
cmake/robot/: CMakeLists.txt
cmake/robot/include/kinematics/: DifferentialDrive.h
cmake/robot/include/odometry/: Pose2D.h  WheelOdometry.h
cmake/robot/include/robot_controller/: RobotController.h
cmake/robot/mock/kinematics/: DifferentialDrive.cpp
cmake/robot/mock/odometry/: WheelOdometry.cpp  WheelOdometryMock.h
cmake/robot/mock/robot_controller/: RobotController.cpp  RobotControllerMock.h
cmake/robot/mocks/kinematics/: DifferentialDriveMock.cpp  DifferentialDriveMock.h
cmake/robot/mocks/odometry/: WheelOdometryMock.cpp  WheelOdometryMock.h
cmake/robot/mocks/robot_controller/: RobotControllerMock.cpp  RobotControllerMock.h
cmake/robot/pch/: pch.hpp
cmake/robot/src/robot_controller/: RobotController.cpp
cmake/robot/tests/odometry/: test_wheel_odometry.cpp
cmake/robot/tests/robot_controller/: test_robot_controller.cpp
cmake/robot_controller/: CMakeLists.txt
cmake/robot_controller/include/robot_controller/: RobotController.h
cmake/robot_controller/pch/: pch.hpp
cmake/robot_controller/tests/: test_robot_controller.cpp
(+240 files in other folders)
